--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@
     background-color: #ffffff;
 }
 
+.bg-color-contact {
+    background-color: #ffffff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -49,10 +53,10 @@ h4 {
 }
 
 .general-sub {
-    font-family: "Exo",sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
-    
+
 }
 
 .inline-block {
@@ -166,7 +170,7 @@ footer {
     margin: 0;
 }
 
-footer .cv-pdf i{
+footer .cv-pdf i {
     color: #fafafa;
     text-align: center;
     font-size: 18px;
@@ -226,13 +230,13 @@ footer .cv-pdf i:hover {
     margin-bottom: 20px;
     display: block;
     clear: both;
-    
+
 }
 
 .personal-info-item key,
 .personal-info-item value {
     padding-right: 8px;
-    
+
 }
 
 .personal-info-item key p,
@@ -271,18 +275,18 @@ footer .cv-pdf i:hover {
     font-weight: 400;
     padding: 3px 30px 2px 10px;
     color: #fafafa;
-    background-color: rgba(25,25,25,0.2)
+    background-color: rgba(25, 25, 25, 0.2)
 }
 
 .progress-section {
     margin: 40px 20px;
-    
+
 }
 
 /*----------------------------------------------Work History*/
 
 .timline-item {
-    padding:4em 2em 0em 2em;
+    padding: 4em 2em 0em 2em;
     position: relative;
     color: #fafafa;
     border-left: 1px solid;
@@ -327,6 +331,28 @@ footer .cv-pdf i:hover {
     margin-bottom: 30px;
 }
 
+/*----------------------------------------------Contact*/
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type=submit] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    background-color: #e84610;
+    color: #fafafa;
+}
+
 /*----------------------------------------------Media Queries*/
 
 @media(min-width: 992px) {
@@ -335,5 +361,11 @@ footer .cv-pdf i:hover {
         float: none;
         display: table-cell;
     }
-}
 
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
+}
