--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,15 +7,15 @@
 }
 
 .bg-color-name-title {
-    background-color: #676767;
+    background-color: #fcff45;
 }
 
 .bg-color-personal-info {
-    background-color: #f4f4f4;
+    background-color: #e8e39d;
 }
 
 .bg-color-three-reasons {
-    background-color: #ffffff;
+    background-color: #f2ea60;
 }
 
 .bg-color-contact {
@@ -54,8 +54,8 @@ h4 {
 
 .general-sub {
     font-family: "Exo", sans-serif;
-    font-weight: 300;
-    color: #fafafa;
+    font-weight: 500;
+    color: #000;
 
 }
 
@@ -102,7 +102,7 @@ header {
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: #fff;
+    color: #000;
 }
 
 .title {
@@ -111,7 +111,7 @@ header {
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: #fff;
+    color: #000;
 }
 
 #nav {
@@ -164,14 +164,14 @@ header {
 /*----------------------------------------------Footer*/
 
 footer {
-    background-color: #525252;
-    color: #fafafa;
+    background-color: #fcff45;
+    color: #000000;
     min-height: 120px;
     margin: 0;
 }
 
 footer .cv-pdf i {
-    color: #fafafa;
+    color: #000;
     text-align: center;
     font-size: 18px;
     padding-left: 5px;
